--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -9,7 +9,7 @@
 
 <body>
   <header>
-    <h1>sumwaterfall Site Plan</h1>
+    <h1>SUMWATERFALL</h1>
     <h2>Mel Thomas S. Lath</h2>
     <h2>WDD 130-9</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
