--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -28,8 +28,12 @@
      <!-- change this -->
     
     <h3>Audience</h3>
-    <p>Plan your trip on our sites starting by small budget to premium. There is good reduction for families.
-        Minors must be in adult company.</p>
+    <p> Our rafting site offer goods activties for children, families, couples, co-workers, and any groups.
+       These activities are designed to strengthen relationship, to procure strong sensations, and allow people to experiment new things and get away from their routine.
+    Also single can meet there. For the country food lovers there are a several varities of foods according the areas of our sites.
+    Plan your trip on our sites starting by small budget, many reduction for children and families. 15% discount for each children, and 5% for whole family or groups. 
+    The premium option offer many advantages, 10% discount on your booking and a diner offer in all of sumwaterfall site around the world.
+  Book quickly through our website. Also, download our application from Playstore or Applestore to keep your ticket our your booking on your mobile device. </p>
     <!-- change this -->
 
     <hr />
@@ -72,12 +76,12 @@
     <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
     <h4>
-      Heading Font: [Font Name here]
-      <!-- change this -->
+      Heading Font: [Roboto]
+      <!-- I choose this font for my heading font because it is simple and more visible. -->
     </h4>
     <h4>
-      Paragraph Font: [Font Name here]
-      <!-- change this -->
+      Paragraph Font: [Inter Tight]
+      <!-- I chose this font for my paragraph because, even if you reduce the zoom on you computer, the font still easy to read -->
     </h4>
     <h3>Normal paragraph example</h3>
     <p>
