--- a/wwr/index.html
+++ b/wwr/index.html
@@ -9,13 +9,14 @@
 <body>
 <header>
        <a id="logo_link" href="index.html">
-        <img class="logo" src="images/logo.png" alt="Dry Oar Logo">
+        <img class="logo" src="images/raftinglogo2.png" alt="Dry Oar Logo">
        </a>
     <nav>
         <a href="index.html">Home</a>
-        <a href="#">Page2</a>
-        <a href="site-plan-rafting.html">Site Plan</a>
+        <a href="aboutus.html">About Us</a>
         <a href="contactus.html">Contact Us</a>
+        <a href="site-plan-rafting.html">Site Plan</a>
+        
     </nav>
 </header>
 <div id="hero">
@@ -45,21 +46,21 @@
     <section class="msg">
         <h2>More Than Just The Thrill</h2>
         <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get awy from it all and relax amongst all the beauty of the great outdoors. </p>
-        <a class='join' href="rivers.html">Join Us</a>
+        <a class='join' href="aboutus.html">Join Us</a>
     </section>
 </main>
 <footer>
-    <p>Dry Oar &copy; 2022 - Mel Thomas S. Lath</p>
+    <p>Dry Oar &copy; 2022 - Mel Thomas S. Lath - WDD130-09</p>
     <p><a href="site-plan-rafting.html">Site Plan</a></p>
     <p><a href="contactus.html">Contact Us</a></p>
     <div class="social">
-        <a href="https://facebook.com">
+        <a target="_blank" href="https://facebook.com">
             <img src="images/facebook.png" alt="fb icon">
         </a>
-        <a href="https://twitter.com">
+        <a target="_blank" href="https://twitter.com">
             <img src="images/twitter.png" alt="twitter icon">
         </a>
-        <a href="https://instagram.com">
+        <a target="_blank" href="https://instagram.com">
             <img src="images/instagram.png" alt="instagram icon">
         </a>
     </div>
