--- a/wwr/aboutus.html
+++ b/wwr/aboutus.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <a id="logo_link" href="index.html">
+            <img class="logo" src="images/raftinglogo2.png" alt="Dry Oar Logo">
+           </a>
+    </header>
 </body>
 </html>
