--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -40,7 +40,9 @@
     <h2>Branding</h2>
     <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="images/raftinglogo2.png" alt="Sumwaterfall Logo" />
+    <a id="logo_link" href="index.html">
+      <img class="logo" src="images/raftinglogo2.png" alt="Dry Oar Logo">
+     </a>
     <hr />
     <h2>Style Guide</h2>
 
