--- a/wwr/index.html
+++ b/wwr/index.html
@@ -59,7 +59,7 @@
         </main>
 
         <footer>
-            <p>Dry Oar &copy; 2022 - Mel Thomas S. Lath - WDD130-09</p>
+            <p>Sumwaterfall &copy; 2022 - Mel Thomas S. Lath - WDD130-09</p>
             <p><a href="site-plan-rafting.html">Site Plan</a></p>
             <p><a href="contactus.html">Contact Us</a></p>
             <div class="social">
