--- a/wwr/index.html
+++ b/wwr/index.html
@@ -31,7 +31,7 @@
                     <h1 class='home-title'>Have An Adventure</h1>
                     <h4>Make Memories with Dry Oar</h4>  
                 <div class='button-box'>
-                    <a class="book" href="rates.html">Book Now</a>
+                    <a class="book" href="contactus.html">Book Now</a>
                 </div>
             </section>
         </div>
@@ -59,7 +59,7 @@
         </main>
 
         <footer>
-            <p>Sumwaterfall &copy; 2022 - Mel Thomas S. Lath - WDD130-09</p>
+            <p id="info">Sumwaterfall &copy; 2022 - Mel Thomas S. Lath - WDD130-09</p>
             <p><a href="site-plan-rafting.html">Site Plan</a></p>
             <p><a href="contactus.html">Contact Us</a></p>
             <div class="social">
